# cuda-k-means

./: CMakeLists.txt  README.md  config.txt
src/: kmeans.cu  kmeans.cuh  kmeans_cpu.cpp  kmeans_cpu.h  main.cpp
